--- a/qt_designer/simexplorer_widget.ui
+++ b/qt_designer/simexplorer_widget.ui
@@ -21,7 +21,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QWidget" name="mplwindow" native="true">
+    <widget class="QFrame" name="mplwindow">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
@@ -45,6 +45,12 @@
      </property>
      <property name="autoFillBackground">
       <bool>false</bool>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
      </property>
      <layout class="QHBoxLayout" name="mplvl">
       <property name="spacing">
