fix to fitlibrary interface and update to fitmanager layout

--- a/qt_designer/fitmanager_widget.ui
+++ b/qt_designer/fitmanager_widget.ui
@@ -595,20 +595,6 @@ p, li { white-space: pre-wrap; }
          <string>Control</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
-         <item row="3" column="1">
-          <widget class="QPushButton" name="pushButton_4">
-           <property name="text">
-            <string>Open last fit pattern</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QPushButton" name="pushButton_3">
-           <property name="text">
-            <string>Open best fit pattern</string>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="1">
           <widget class="Line" name="line_2">
            <property name="orientation">
@@ -651,17 +637,31 @@ p, li { white-space: pre-wrap; }
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
+         <item row="3" column="1">
           <widget class="QPushButton" name="pushButton">
            <property name="text">
-            <string>Fill DP w/ best fit</string>
+            <string>View (data - last fit)</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="3" column="0">
+          <widget class="QPushButton" name="pushButton_4">
+           <property name="text">
+            <string>View last fit</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
           <widget class="QPushButton" name="pushButton_5">
            <property name="text">
-            <string>Fill DP w/ last fit</string>
+            <string>Fill data w/ last fit</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="QPushButton" name="pushButton_3">
+           <property name="text">
+            <string>Open in P. Creator</string>
            </property>
           </widget>
          </item>
