--- a/qt_designer/fitmanager_widget.ui
+++ b/qt_designer/fitmanager_widget.ui
@@ -604,13 +604,19 @@ p, li { white-space: pre-wrap; }
          </item>
          <item row="0" column="1">
           <widget class="QPushButton" name="pb_abortfits">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>Abort fits</string>
+           </property>
+           <property name="checkable">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QPushButton" name="pushButton_14">
+          <widget class="QPushButton" name="pb_viewresults">
            <property name="text">
             <string>View results table</string>
            </property>
@@ -620,6 +626,9 @@ p, li { white-space: pre-wrap; }
           <widget class="QPushButton" name="pb_runfits">
            <property name="text">
             <string>Run fits</string>
+           </property>
+           <property name="checkable">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -631,35 +640,38 @@ p, li { white-space: pre-wrap; }
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="pb_savetable">
            <property name="text">
             <string>Save results table</string>
            </property>
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="pb_viewfitdiff">
            <property name="text">
             <string>View (data - last fit)</string>
            </property>
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QPushButton" name="pushButton_4">
+          <widget class="QPushButton" name="pd_viewfit">
            <property name="text">
             <string>View last fit</string>
            </property>
           </widget>
          </item>
          <item row="5" column="0">
-          <widget class="QPushButton" name="pushButton_5">
+          <widget class="QPushButton" name="pb_filldata">
            <property name="text">
             <string>Fill data w/ last fit</string>
            </property>
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QPushButton" name="pushButton_3">
+          <widget class="QPushButton" name="pb_to_patcreator">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>Open in P. Creator</string>
            </property>
