fitman print to gui textbox and some cleaning up

--- a/qt_designer/fitmanager_widget.ui
+++ b/qt_designer/fitmanager_widget.ui
@@ -63,7 +63,7 @@
        <number>9</number>
       </property>
       <item>
-       <widget class="QTextBrowser" name="textBrowser">
+       <widget class="QTextBrowser" name="tb_fit_report">
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
         </property>
