--- a/qt_designer/fitmanager_widget.ui
+++ b/qt_designer/fitmanager_widget.ui
@@ -654,7 +654,7 @@ p, li { white-space: pre-wrap; }
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QPushButton" name="pd_viewfit">
+          <widget class="QPushButton" name="pb_viewfit">
            <property name="text">
             <string>View last fit</string>
            </property>
