--- a/qt_designer/datapattern_widget.ui
+++ b/qt_designer/datapattern_widget.ui
@@ -158,7 +158,7 @@ p, li { white-space: pre-wrap; }
          <item row="3" column="1">
           <widget class="QPushButton" name="pb_removecentral">
            <property name="text">
-            <string>Mask Central Pixels</string>
+            <string>Mask tpx Central Pixels</string>
            </property>
           </widget>
          </item>
@@ -169,14 +169,14 @@ p, li { white-space: pre-wrap; }
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="5" column="1">
           <widget class="QPushButton" name="pb_savemask">
            <property name="text">
             <string>Save Mask</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
+         <item row="5" column="0">
           <widget class="QPushButton" name="pb_loadmask">
            <property name="text">
             <string>Load Mask</string>
@@ -194,6 +194,20 @@ p, li { white-space: pre-wrap; }
           <widget class="QPushButton" name="pb_maskabove">
            <property name="text">
             <string>Mask Above</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0">
+          <widget class="QPushButton" name="pb_expandmask">
+           <property name="text">
+            <string>Expand Mask</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QPushButton" name="pb_clearmask">
+           <property name="text">
+            <string>Clear Mask</string>
            </property>
           </widget>
          </item>
