--- a/qt_designer/datapattern_widget.ui
+++ b/qt_designer/datapattern_widget.ui
@@ -220,14 +220,17 @@ p, li { white-space: pre-wrap; }
          <string>Pattern Manipulation</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
-         <item row="1" column="1">
-          <widget class="QPushButton" name="pb_compressmesh">
+         <item row="0" column="1" colspan="2">
+          <widget class="QPushButton" name="pb_buildmesh">
            <property name="text">
-            <string>Compress Pixel Mesh</string>
+            <string>Build Angular Calibration Mesh</string>
+           </property>
+           <property name="checkable">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="4" column="1" colspan="2">
           <widget class="QPushButton" name="pb_fitrange">
            <property name="text">
             <string>Set Fit Range</string>
@@ -244,13 +247,17 @@ p, li { white-space: pre-wrap; }
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <widget class="QPushButton" name="pb_buildmesh">
+         <item row="3" column="2">
+          <widget class="QPushButton" name="pb_editorientation">
            <property name="text">
-            <string>Build Angular Calibration Mesh</string>
+            <string>Edit Orientation</string>
            </property>
-           <property name="checkable">
-            <bool>false</bool>
+          </widget>
+         </item>
+         <item row="1" column="1" colspan="2">
+          <widget class="QPushButton" name="pb_compressmesh">
+           <property name="text">
+            <string>Compress Pixel Mesh</string>
            </property>
           </widget>
          </item>
