--- a/qt_designer/importsettings_dialog.ui
+++ b/qt_designer/importsettings_dialog.ui
@@ -16,6 +16,12 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QWidget" name="widget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="toolTip">
       <string/>
      </property>
@@ -77,7 +83,7 @@
          <item row="2" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Orientation (rr,rl,mh,mv)</string>
+            <string>Orientation (cw, cc, mh, mv)</string>
            </property>
           </widget>
          </item>
@@ -119,22 +125,9 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_3">
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>28</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>Orientation commands explanation:</string>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="QLabel" name="label_2">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -142,11 +135,17 @@
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>28</height>
+       <height>16777215</height>
       </size>
      </property>
      <property name="text">
-      <string>Rotate Right, Rotate Left, Mirror Horizontaly, Mirror Verticaly</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Orientation commands:&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;cw&lt;/span&gt; - Rotate Clockwise, &lt;span style=&quot; font-weight:600;&quot;&gt;cc&lt;/span&gt; - Rotate Counterclockwise,&lt;br/&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;mh&lt;/span&gt; - Mirror Horizontaly, &lt;span style=&quot; font-weight:600;&quot;&gt;mv&lt;/span&gt; - Mirror Verticaly.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::AutoText</enum>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
