--- a/qt_designer/datapattern_widget.ui
+++ b/qt_designer/datapattern_widget.ui
@@ -143,6 +143,9 @@ p, li { white-space: pre-wrap; }
            <property name="checked">
             <bool>false</bool>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="0" column="1">
@@ -153,6 +156,9 @@ p, li { white-space: pre-wrap; }
            <property name="checkable">
             <bool>true</bool>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="3" column="1">
@@ -160,6 +166,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Mask tpx Central Pixels</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="3" column="0">
@@ -167,6 +176,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Mask Edge Pixels</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="5" column="1">
@@ -174,6 +186,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Save Mask</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="5" column="0">
@@ -181,6 +196,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Load Mask</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="1" column="0">
@@ -188,6 +206,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Mask Below</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="1" column="1">
@@ -195,6 +216,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Mask Above</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="4" column="0">
@@ -202,6 +226,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Expand Mask</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="4" column="1">
@@ -209,6 +236,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Clear Mask</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_mask_group</string>
+           </attribute>
           </widget>
          </item>
         </layout>
@@ -228,6 +258,9 @@ p, li { white-space: pre-wrap; }
            <property name="checkable">
             <bool>false</bool>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_manip_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="4" column="1" colspan="2">
@@ -235,6 +268,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Set Fit Range</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_manip_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="3" column="1">
@@ -245,6 +281,9 @@ p, li { white-space: pre-wrap; }
            <property name="checkable">
             <bool>true</bool>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_manip_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="3" column="2">
@@ -252,6 +291,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Edit Orientation</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_manip_group</string>
+           </attribute>
           </widget>
          </item>
          <item row="1" column="1" colspan="2">
@@ -259,6 +301,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Compress Pixel Mesh</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_manip_group</string>
+           </attribute>
           </widget>
          </item>
         </layout>
@@ -275,6 +320,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Edit Color Scale</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_vis_group</string>
+           </attribute>
           </widget>
          </item>
          <item>
@@ -282,6 +330,9 @@ p, li { white-space: pre-wrap; }
            <property name="text">
             <string>Set Labels</string>
            </property>
+           <attribute name="buttonGroup">
+            <string notr="true">bg_vis_group</string>
+           </attribute>
           </widget>
          </item>
         </layout>
@@ -294,4 +345,21 @@ p, li { white-space: pre-wrap; }
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="bg_manip_group">
+   <property name="exclusive">
+    <bool>false</bool>
+   </property>
+  </buttongroup>
+  <buttongroup name="bg_mask_group">
+   <property name="exclusive">
+    <bool>false</bool>
+   </property>
+  </buttongroup>
+  <buttongroup name="bg_vis_group">
+   <property name="exclusive">
+    <bool>false</bool>
+   </property>
+  </buttongroup>
+ </buttongroups>
 </ui>
