--- a/qt_designer/editorientation_dialog.ui
+++ b/qt_designer/editorientation_dialog.ui
@@ -16,17 +16,17 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QWidget" name="widget" native="true">
-     <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0,0,0">
-      <item row="1" column="5">
-       <widget class="QLineEdit" name="le_phi">
+     <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="le_xyphi">
         <property name="maximumSize">
          <size>
-          <width>50</width>
+          <width>150</width>
           <height>16777215</height>
          </size>
         </property>
         <property name="text">
-         <string>0</string>
+         <string>(0, 0, 0)</string>
         </property>
        </widget>
       </item>
@@ -43,59 +43,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
-       <widget class="QLineEdit" name="le_y">
-        <property name="maximumSize">
-         <size>
-          <width>50</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>0</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="le_x">
-        <property name="maximumSize">
-         <size>
-          <width>50</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>0</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="2">
-       <widget class="QLabel" name="label_3">
-        <property name="maximumSize">
-         <size>
-          <width>5</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>,</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="4">
-       <widget class="QLabel" name="label_2">
-        <property name="maximumSize">
-         <size>
-          <width>5</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>,</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="6">
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -108,7 +56,7 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="0" colspan="7">
+      <item row="0" column="0" colspan="3">
        <widget class="QLabel" name="label_4">
         <property name="maximumSize">
          <size>
