qtablewidget for simulation view

--- a/qt_designer/simexplorer_widget.ui
+++ b/qt_designer/simexplorer_widget.ui
@@ -133,7 +133,14 @@ p, li { white-space: pre-wrap; }
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
-          <widget class="QListWidget" name="simlist"/>
+          <widget class="QTableWidget" name="simlist">
+           <property name="selectionBehavior">
+            <enum>QAbstractItemView::SelectRows</enum>
+           </property>
+           <attribute name="verticalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
+          </widget>
          </item>
         </layout>
        </widget>
